# md-classifier

./: .gitignore  .urmzd.sr.yml  .vsls.json  README.md  cnn.ipynb  presentation.pdf:Zone.Identifier  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: compile-pdf.yml  compile_pdf.yml  release.yml
docs/: p1.bib  p1.tex
docs/n-gram-approach/: n-gram-approach.tex
docs/p1/: p1.bib
docs/report/: report.bib  report.tex
notebooks/: one-hot-encoding.ipynb
resources/data/sources/: migraine.csv  tetanus.csv
resources/data/targets/: depression.txt  tetanus.txt
resources/data/targets/fast-text/: depression.txt  migraine.txt  tetanus.txt
resources/data/targets/one-hot-encoding/: depression.txt  migraine.txt  tetanus.txt
resources/sources/: depression.csv  headache.csv  headache.txt  migraine.csv  tetanus.csv
resources/targets/: depression.csv  depression.txt  headache.csv  migraine.csv  migraine.txt  tetanus.csv  tetanus.txt
scripts/: compile-latex.sh  validate_fast_text.py  validate_one_hot.py
src/: cnn.ipynb  fast-text-cnn.ipynb  fast-text.ipynb  implementation.ipynb  one-hot-cnn.ipynb  one-hot-encoding.ipynb  scraper.py  test.py  utils.py
src/.ipynb_checkpoints/: CNN-checkpoint.ipynb  cnn-checkpoint.ipynb
src/collector/: .project_statement.md.swp  collector.py
src/md_nlp.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_scraper.py
